简历样式编写

--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>我的简历</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+    <article>
+        <section class="bio">
+            <h1>肖林锋</h1>
+            <img src="./img/i.jpg" alt="personPic" width="100" height="100">
+            <p>
+                男 | 23岁 | 前端开发工程师 | 长沙
+            </p>
+            <p>
+                手机： 17352649746 | WeChat： 17352649746 | Email: adamboov@163.com
+            </p>
+        </section>
+        <section>
+            <h2>技能介绍</h2>
+            <div id="skillMap" style="width: 600px;height: 400px"></div>
+            <ul>
+                <li>熟悉HTML、CSS、MySQL数据库</li>
+                <li></li>
+                <li>熟悉SpringBoot、SpringMVC、MyBatis框架</li>
+            </ul>
+        </section>
+        <section>
+            <h2>工作经历</h2>
+        </section>
+        <section>
+            <h2>教育经历</h2>
+        </section>
+    </article>
+    <script src="https://cdn.bootcss.com/echarts/4.6.0/echarts.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
