--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <article>
         <section class="bio">
             <h1>肖林锋</h1>
-            <img src="./img/i.jpg" alt="personPic" width="100" height="100">
+            <img class="personPic" src="./img/me.jpg" alt="personPic" width="100" height="120">
             <p>
-                男 | 23岁 | 前端开发工程师 | 长沙
+                男 | 23岁 | Java开发工程师 | 长沙
             </p>
             <p>
-                手机： 17352649746 | WeChat： 17352649746 | Email: adamboov@163.com
+                手机： 17352649746 | 微信： 17352649746 | Email: adamboov@163.com
             </p>
         </section>
         <section>
@@ -25,7 +25,7 @@
             <div id="skillMap" style="width: 600px;height: 400px"></div>
             <ul>
                 <li>熟悉HTML、CSS、MySQL数据库</li>
-                <li></li>
+                <li>了解JavaScript、VUE和NodeJS等前端技术</li>
                 <li>熟悉SpringBoot、SpringMVC、MyBatis框架</li>
             </ul>
         </section>
