技能介绍编写

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             <h2>技能介绍</h2>
             <div id="skillMap" style="width: 600px;height: 400px"></div>
             <ul>
-                <li>熟悉HTML、CSS、MySQL数据库</li>
-                <li>了解JavaScript、VUE和NodeJS等前端技术</li>
-                <li>熟悉SpringBoot、SpringMVC、MyBatis框架</li>
+                <li>了解JavaScript、JQuery、网页SEO优化和NodeJS等前端技术</li>
+                <li>熟悉HTML、CSS、MySQL、NginxWEB服务器、Tomcat应用服务器</li>
+                <li>熟练使用Eclipse、IDEA、Atom、Maven、Git、Xshell等开发工具</li>
+                <li>熟悉SpringBoot、SpringMVC、MyBatis等前端Java框架</li>
             </ul>
         </section>
         <section>
